Die Ergebnisse wirtschaftlich gerundet sein soll.